updated launch syntax to reflect newer libraries (versions)